[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>"]
description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/meqif/rust-utp"
keywords = ["utp", "networking", "protocol", "transport"]
license = "MIT/Apache-2.0"
name = "utp"
readme = "README.md"
repository = "https://github.com/meqif/rust-utp"
version = "0.7.1-pre"

[dependencies]
env_logger = "0.5"
log = "0.4"
num-traits = "0.2"
rand = "0.4"
utp-packet = { version = "*", path = "utp-packet" }

[dependencies.clippy]
optional = true
version = "0.0.131"

[dev-dependencies]
quickcheck = "0.6"

[lib]
name = "utp"

[features]
unstable = []
