[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>"]
description = "A µTP (Micro/uTorrent Transport Library) library implemented in Rust"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/meqif/rust-utp"
keywords = ["utp", "networking", "protocol", "transport"]
license = "MIT/Apache-2.0"
name = "utp"
readme = "README.md"
repository = "https://github.com/meqif/rust-utp"
version = "0.7.1-pre"

[dependencies]
log = "0.4.14"
num-traits = "0.2.14"
rand = "0.8.3"

[dev-dependencies]
quickcheck = "1.0.3"
env_logger = "0.8.3"

[lib]
name = "utp"

[features]
unstable = []
